# Database-FP

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  sample_data.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  category.py  customer.py  dashboard.py  order.py  product.py  restock.py  supplier.py  user.py  warehouse.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: db.py
backend/app/schemas/: CustomerModel.py  OrderModel.py  ProductModel.py  UserModel.py  WarehouseModel.py  __init__.py
backend/app/services/: __init__.py  category.py  customer.py  dashboard.py  order.py  product.py  restock.py  supplier.py  user.py  warehouse.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.jsx  page.jsx
frontend/src/app/auth/: page.jsx
frontend/src/app/context/: DataContext.jsx  IdContext.jsx  TokenContext.jsx
frontend/src/app/customer/: page.jsx
frontend/src/app/home/: layout.jsx  page.jsx
frontend/src/app/order/: create.jsx  filter.jsx  page.jsx
frontend/src/app/product/: filter.jsx  page.jsx
frontend/src/app/supplier/: page.jsx
frontend/src/app/warehouse/: page.jsx
frontend/src/components/: SidebarButton.jsx  login-form.jsx
frontend/src/components/dashboard/: RecentOrders.jsx  StockLevels.jsx  TopProductQty.jsx  TopProductRev.jsx  TotalSales.jsx
frontend/src/components/layout/: BasicLayout.jsx  Header.jsx  LayoutWrapper.jsx  Sidebar.jsx
frontend/src/components/widget/: Category.jsx  (+2 more)
frontend/src/lib/: axios.js
(+28 files in other folders)
